@@ -6,6 +6,8 @@ import junit.framework.TestCase;
 
 import java.util.Properties;
 
+import org.tmatesoft.svn.core.SVNProperty;
+
 public class TextFileTest extends TestCase {
 
   private static final String BR = System.getProperty("line.separator");
@@ -22,6 +24,20 @@ public class TextFileTest extends TestCase {
     final TextFile textFile = new TextFile(content);
     assertEquals(2, textFile.size());
     assertEquals("Line&amp;one" + BR + "Line&lt;two&gt;" + BR, textFile.getContent());
+  }
+
+  public void testTextFilePlainWebsafeExpandedKeywords() throws Exception {
+    final Properties props = new Properties();
+    props.put(SVNProperty.KEYWORDS, "Author Date Revision URL");
+    props.put(SVNProperty.LAST_AUTHOR, "domain\\user");
+    props.put(SVNProperty.COMMITTED_DATE, "2005-09-05T18:27:48.718750Z");
+    props.put(SVNProperty.COMMITTED_REVISION, "1234");
+
+    final String content = "$Revision$" + BR + "$Author$";
+    final TextFile textFile = new TextFile(content, "Test.java", "UTF-8", null, props, "http://localhost/svn");
+
+    assertEquals(2, textFile.size());
+    assertEquals("$Revision: 1234 $" + BR + "$Author: domain\\user $" + BR, textFile.getContent());
   }
 
   public void testTextFileColorized() throws Exception {
